--- a/.github/workflows/sonar-backend.yml
+++ b/.github/workflows/sonar-backend.yml
@@ -53,8 +53,8 @@ jobs:
         run: |
           mvn -B clean compile org.sonarsource.scanner.maven:sonar-maven-plugin:sonar \
             -DskipTests \
-            -Dsonar.projectKey= \
-            -Dsonar.organization= \
+            -Dsonar.projectKey= CARDAV-45_Clone-Backend\
+            -Dsonar.organization= cardav-45\
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.sources=src/main/java \
             -Dsonar.tests=src/test/java \
